--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <link rel="stylesheet" href="calc.css">
   </head>
   <body>
-    <div class="forem-group">
-      <input type="text" />
-      <button onclick="onSubmit()">Submit</button>
+       <div id="calculator" class="calculator">
+      <div class="calc-head">
+        <input type="text" id="calc-input" class="calc-input" disabled />
+      </div>
+      <div class="calc-body">
+        <button class="calc-btn btn-number" data-value="1">1</button>
+        <button class="calc-btn btn-number" data-value="2">2</button>
+        <button class="calc-btn btn-number" data-value="3">3</button>
+        <button class="calc-btn btn-action" data-value="+">+</button>
+        <button class="calc-btn btn-number" data-value="4">4</button>
+        <button class="calc-btn btn-number" data-value="5">5</button>
+        <button class="calc-btn btn-number" data-value="6">6</button>
+        <button class="calc-btn btn-action" data-value="-">-</button>
+        <button class="calc-btn btn-number" data-value="7">7</button>
+        <button class="calc-btn btn-number" data-value="8">8</button>
+        <button class="calc-btn btn-number" data-value="9">9</button>
+        <button class="calc-btn btn-action" data-value="*">*</button>
+        <button class="calc-btn btn-action" data-value="C">C</button>
+        <button class="calc-btn btn-number" data-value="0">0</button>
+        <button class="calc-btn btn-submit" data-value="=">=</button>
+        <button class="calc-btn btn-action" data-value="/">/</button>
+      </div>
     </div>
+  
     <script src="/script.js"></script>
+    <script src="calc.js"></script>
   </body>
 </html>
  
